# drip-control

./: .gitignore  circuit.html
firmware/: Cargo.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: lib.rs  main.rs
