[package]
name = "irrigation-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.1", features = ["defmt", "stm32f411re", "time-driver-any", "memory-x"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }

defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
