[package]
name = "irrigation-controller"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "irrigation-controller"
path = "src/main.rs"

[[bin]]
name = "solenoid-test"
path = "src/bin/solenoid_test.rs"

[[bin]]
name = "led-test"
path = "src/bin/led_test.rs"

[[bin]]
name = "adc-dump"
path = "src/bin/adc_dump.rs"

[[bin]]
name = "battery-test"
path = "src/bin/battery_test.rs"

[[bin]]
name = "watchdog-test"
path = "src/bin/watchdog_test.rs"

# Embassy + cortex-m only build for the embedded target (target_os = "none").
# This lets `cargo test --target x86_64-unknown-linux-gnu --lib` build the pure
# logic crate on the host without dragging in chip-specific dependencies.
[target.'cfg(target_os = "none")'.dependencies]
embassy-executor = { version = "0.6", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.1", features = ["defmt", "stm32f411re", "time-driver-any", "memory-x"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }

defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
